Task 5579:Migrate rec to jdk 11
git-svn-id: file:///tmp/svnroot_only_rec/internal/rec-project/rec/branches/jdk11-migration@19868 8c4c7310-a39f-45c4-bd0d-b10b2e5d99a4