@@ -50,21 +50,21 @@ public class CondensadorStampDriver extends AbstractStampDriver {
 
 		stampConfig.addCommandData(
 				StampConfigTranslator.USER_POS_HIGH_STR,
-				new Float(Defaults.defaultIfEmpty(
+				Float.valueOf(Defaults.defaultIfEmpty(
 						config.getSelectedHardwareParameterValue(StampConfigTranslator.USER_POS_HIGH_STR),
 						info.getHardwareParameterValue(StampConfigTranslator.USER_POS_HIGH_STR))));
 
 		stampConfig.addCommandData(
 				StampConfigTranslator.USER_POS_LOW_STR,
-				new Float(Defaults.defaultIfEmpty(
+				Float.valueOf(Defaults.defaultIfEmpty(
 						config.getSelectedHardwareParameterValue(StampConfigTranslator.USER_POS_LOW_STR),
 						info.getHardwareParameterValue(StampConfigTranslator.USER_POS_LOW_STR))));
 
-		stampConfig.addCommandData(StampConfigTranslator.NUMSAMPLES_STR, new Integer(config.getTotalSamples()));
+		stampConfig.addCommandData(StampConfigTranslator.NUMSAMPLES_STR, Integer.valueOf(config.getTotalSamples()));
 
 		/*
 		 * stampConfig.addCommandData(StampConfigTranslator.FREQ_INTERBAL_STR,
-		 * new Integer((int)config.getSelectedFrequency().getFrequency()));
+		 * Integer.valueOf((int)config.getSelectedFrequency().getFrequency()));
 		 */
 		StampTranslator translator = StampTranslatorProcessorManager.getTranslator(stampConfig);
 		if (!translator.translate(stampConfig))
